--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "PORT=80 HOST=localhost VIDEO_URL='https://www.youtube.com/watch?v=hh8Mofex_6o' node server.js"
   },
   "author": "",
   "license": "ISC",
