--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=80 HOST=localhost VIDEO_URL='https://www.youtube.com/watch?v=hh8Mofex_6o' node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
